# 12c-stateless-relay-transfer

./: .gitignore  HOW_TO_SETUP.md  README.md  package.json  vite.config.ts
client/: README.md  build-ts.ps1  build-ts.sh  build.ps1  build.sh  package-lock.json  package.json  package.json.bak  start.ps1  start.sh
client/app/: package.json
client/app/src/: index.ts
client/app/src/credential/: credential-style.ts  generate-credential.ts
client/app/src/download/: receive-file.ts
client/app/src/upload/: send-file.ts  upload-token-reservation-exhausted-error.ts
client/core/: README.md  build-native.ps1  build-native.sh
client/core/12c_file_transfer_scheme/: CMakeLists.txt
client/core/12c_file_transfer_scheme/12c_cryptography/: CMakeLists.txt
client/core/12c_file_transfer_scheme/12c_cryptography/include/twelve_c/: constants.hpp  crypto.hpp  merkle.hpp  receive_decrypt_session.hpp  receiver.hpp  segment.hpp  sender.hpp  smb.hpp  smb_parser.hpp  types.hpp  upload_prepare_session.hpp  wire_layout.hpp
client/core/12c_file_transfer_scheme/12c_cryptography/src/: crypto.cpp  merkle.cpp  receive_decrypt_session.cpp  receiver.cpp  segment.cpp  sender.cpp  smb.cpp  smb_parser.cpp  upload_prepare_session.cpp  wire_layout.cpp
client/core/12c_file_transfer_scheme/12c_cryptography/tests/: receive_decrypt_streaming_main.cpp  roundtrip_main.cpp  upload_prepare_streaming_main.cpp
client/core/12c_file_transfer_scheme/12c_receive_protocol/: CMakeLists.txt
client/core/12c_file_transfer_scheme/12c_receive_protocol/include/twelve_c/: protocol_constants.hpp  receive_protocol.hpp  receive_transport.hpp
client/core/12c_file_transfer_scheme/12c_receive_protocol/src/: receive_protocol.cpp
client/core/twelve_c_wasm/: .gitignore  CMakeLists.txt  README.md  bindings.cpp  build-openssl-emscripten.ps1  build-openssl-emscripten.sh  build-wasm.ps1  build-wasm.sh  setup-emsdk.ps1  setup-emsdk.sh
client/electron/: main.js
client/transfer/: .gitignore  package.json  relay.config.example.json  tsconfig.json
client/transfer/src/: index.ts  node.ts  segment-policy.ts  types.ts  wire-block-policy.ts
client/transfer/src/config/: create-from-config.ts  load-config.node.ts  load-config.ts  transfer-config.ts
client/transfer/src/protocol/: block-hash-pool.ts  block-hash.ts  receive-plan.ts  receive-prefetch-policy.ts  received-file-name.ts
client/transfer/src/resilience/: get-with-fallbacks.ts  put-with-retry.ts  retry-policy.ts  stripe-put-concurrency.ts
client/transfer/src/router/: endpoints-from-registry.ts  registry-client.ts  relay-router.ts
client/transfer/src/session/: download-session.ts  download-status.ts  finalize-receive-decrypt.ts  replica-replication.ts  upload-registry.ts  upload-session.ts  upload-status.ts
client/transfer/src/transport/: byte-transfer-progress.ts  fetch-receive-transport.ts  fetch-upload-client.ts  get-response-body.ts  index.ts  put-wire-block-body.ts  receive-transport.ts
client/transfer/src/wasm/: loader.ts  (+4 more)
client/web/: README.md  index.html  package.json  start.ps1  start.sh  tsconfig.json  vite.config.ts
client/web/public/: relay.config.json
client/web/scripts/: copy-wasm.mjs
client/web/src/: app.ts  banner.ts  credential-slots.ts  credential-style-settings.ts  file-ttl.ts  file-type-icon.ts  format-error.ts  main.ts  qr-share-link.ts  qr-share.ts  receive-credential-input.ts  roundtrip-selftest.ts  runtime.ts  styles.css  upload-worker-factory.ts
client/web/tests/: qr-share-link.test.mjs
docs/: 12C-Transfer-Protocol.en.md  12C-Transfer-Protocol.zh.md  工作报告-核心摘录.md  数据库设计说明.docx  数据库设计说明.md
relay_server/: __init__.py  __main__.py  config.py  identity.py
relay_server/api/: admin_deps.py
relay_server/api/routes/: __init__.py
relay_server/domain/: __init__.py
relay_server/persistence/: __init__.py  disk_store.py
relay_server/registry/: block_auth_key_store.py
server/: PENDINGS.md  README.md  start-all.ps1  start-all.sh  start-cloudflare-public.ps1  stop-cloudflare-public.ps1
server/console/: .gitignore  README.md  console_server.config.example.json  console_server.secrets.example.json  requirements.txt  start.ps1  start.sh
server/console/console_server/: __init__.py  __main__.py  config.py  db_admin.py  relay_config.py
server/console/static/: app.js  index.html  styles.css
server/local_secrets/: __init__.py
server/registry/: .gitignore  README.md  registry_server.config.example.json  registry_server.secrets.example.json  requirements.txt  start.ps1  start.sh
server/registry/registry_server/: __init__.py  __main__.py  config.py  identity.py
server/registry/tests/: registry_fixtures.py  test_abandon_replica_placements.py  test_allowlist_admin_api.py  test_block_auth_crypto.py  test_client_static.py  test_database_audit.py  test_heartbeat_url_consistency.py  test_live_relay_url.py  test_placement_db.py  test_placement_policy.py  test_placement_scheduler.py  test_placement_ttl.py  test_read_steering.py  test_registration_requests.py  test_resolve_download.py
server/relay/: .gitignore  README.md  relay_server.config.example.json  relay_server.config.json  relay_server.secrets.example.json  relay_server.secrets.json  requirements.txt  start.ps1  start.sh
server/relay/relay_server/: config.py
server/relay/tests/: test_background_registry.py  test_block_audit.py  test_block_sweep.py  test_registry_client.py  test_registry_config.py  test_registry_connectivity.py
(+38 files in other folders)
